--- a/src/index.html
+++ b/src/index.html
@@ -14,8 +14,7 @@
   <div class="wrapper">
     <include src="./partials/header.html"></include>
     <main>
-      <include src="./partials/greeting.html"></include>
-      <include src="./partials/ourValue.html"></include>
+      <include src="./partials/myProject.html"></include>
       <include src="./partials/product.html"></include>
       <include src="./partials/benefits.html"></include>
     </main>
